Fix font contrast in by the numbers; add border below heading

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,11 +43,13 @@ a {
 .number-heading {
   color: #0d3760;
   margin-bottom: 1em;
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid #0d3760;
 }
 
 .by-the-number {
   font-size: 3em;
-  color: #6ec5ff;
+  color: #0d3760;
   margin-bottom: 0;
 }
 
